# llama-mimi

./: LICENSE  README.md  inference.py  pyproject.toml  train.sh
config/: llama3_1_8b.toml  llama3_2_1b.toml  llama3_2_1b_librispeech.toml  llama3_2_1b_peoples_speech.toml
eval/: sLM21.py  sStoryCloze.py  salmon.py
scripts/: convert_dcp_to_hf.py
tests/unit_tests/: test_audio_array_to_text.py
torchtitan/: __init__.py  config_manager.py  train.py
torchtitan/components/: checkpoint.py  dataloader.py  ft.py  lr_scheduler.py  metrics.py  tokenizer.py  validate.py
torchtitan/components/quantization/: float8.py  mx.py
torchtitan/datasets/: hf_datasets.py
torchtitan/distributed/: pipeline.py  utils.py
torchtitan/models/: __init__.py
torchtitan/models/llama3/infra/: parallelize.py
torchtitan/models/llama3/train_configs/: llama3_8b.toml
torchtitan/protocols/: model_converter.py
torchtitan/tools/: logging.py  profiling.py
