[project]
name = "torchtitan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "blobfile>=3.0.0",
    "datasets>=3.6.0",
    "fsspec>=2025.3.0",
    "librosa>=0.11.0",
    "openai-whisper>=20250625",
    "soundfile>=0.13.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "tomli>=1.1.0 ; python_full_version < '3.11'",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchcodec==0.5.0",
    "torchdata>=0.8.0",
    "transformers>=4.53.2",
    "tyro>=0.9.25",
    "wandb>=0.20.1",
    "seaborn>=0.13.2",
    "moshi>=0.2.11",
    "audiobox-aesthetics>=0.0.4",
    "pyannote-audio>=3.3.2",
    "python-dotenv>=1.1.1",
    "openai>=1.107.1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["torchtitan"]
